update code layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="cat5">Peek-a-Box</string>
     <string name="cat6">Winter Whiskers</string>
     <string name="cat7">The Thoughtful CoCo</string>
-    <string name="cat8">Starry Night with a Black Cat</string>
+    <string name="cat8">Starry Night</string>
     <string name="cat9">Stop IT!</string>
 
 </resources>
